test/langtools/tools/javac/T8314216.out
T8314216.java:13:23: compiler.err.invalid.case.label.combination
T8314216.java:14:28: compiler.err.invalid.case.label.combination
2 errors